<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_main_points"
        android:icon="@drawable/ic_stars_black_24dp"
        android:title="@string/nav_main_points"
        app:actionLayout="@layout/nav_main_item_points" />

    <item
        android:id="@+id/nav_main_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/nav_main_settings" />

    <item
        android:id="@+id/nav_main_promotion_code"
        android:icon="@drawable/ic_assignment_black_24dp"
        android:title="@string/nav_main_promotion_code"
        app:actionLayout="@layout/nav_main_item_promotion_code" />

    <item
        android:id="@+id/nav_main_reminder"
        android:icon="@drawable/ic_timer_black_24dp"
        android:title="@string/nav_main_reminder" />

    <item
        android:id="@+id/nav_main_contact_us"
        android:icon="@drawable/ic_message_black_24dp"
        android:title="@string/nav_main_contact_us" />

    <item
        android:id="@+id/nav_main_logout"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:title="@string/text_logout" />

</menu>