<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="in.app.sekkah.ui.main.home.HomeFragment">


    <TextView
        android:id="@+id/tvWhereAreYou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/text_whereareyou"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rgLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWhereAreYou">

        <RadioButton
            android:id="@+id/rbAtStation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/text_atstation" />

        <RadioButton
            android:id="@+id/rbOnTrain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_ontrain" />

        <RadioButton
            android:id="@+id/rbJustTracking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_justtracking" />

    </RadioGroup>

    <View
        android:id="@+id/hb1"
        android:layout_width="298dp"
        android:layout_height="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgLocation" />

    <TextView
        android:id="@+id/lblDeparture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:labelFor="@+id/spnhomeDeparture"
        android:text="@string/text_departure"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hb1" />

    <Spinner
        android:id="@+id/spnDeparture"
        android:layout_width="298dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblDeparture" />

    <TextView
        android:id="@+id/lblDestination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/text_destination"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnDeparture" />

    <Spinner
        android:id="@+id/spnDestination"
        android:layout_width="298dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblDestination" />

    <Button
        android:id="@+id/btnTrains"
        android:layout_width="298dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorAccen2"
        android:elevation="0dp"
        android:text="@string/text_trains"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnDestination" />


</android.support.constraint.ConstraintLayout>
