<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDefaultBackground"
    tools:context="in.radioactivegames.sekkah.ui.loginregister.forgotpassword.ForgotPasswordActivity">

    <ImageView
        android:id="@+id/ivHeader"
        android:layout_width="match_parent"
        android:layout_height="195dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/loginheader"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/vpViewPager"
        android:layout_width="match_parent"
        android:layout_height="480dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorDefaultBackground"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">


        <EditText
            android:id="@+id/etEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:ems="13"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="13"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEmail" />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="13"
            android:hint="@string/text_confirmpassword"
            android:inputType="textPassword"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPassword" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="80dp"
            android:background="@color/colorPrimary"
            android:text="@string/text_forgotpassword"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword" />


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/text_login"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSubmit" />

    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>
