<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDefaultBackground">


    <ImageView
        android:id="@+id/ivHeader"
        android:layout_width="match_parent"
        android:layout_height="195dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/loginheader"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_marginTop="140dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="40dp"
        android:paddingTop="40dp"
        android:background="@color/colorDefaultBackground">


        <EditText
            android:id="@+id/etUsername"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="@string/text_username"
            android:inputType="text"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:background="@color/colorPrimary"
            android:text="@string/text_login"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etUsername" />

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="44dp"
            android:text="@string/text_forgotpassword"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword">

            <View
                android:layout_width="100dp"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/text_or" />

            <View
                android:layout_width="100dp"
                android:layout_height="2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:background="@android:color/darker_gray" />

        </LinearLayout>


        <FrameLayout
            android:id="@+id/FrameLayout1"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnFacebook"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/buttonfacebook"
                android:onClick="facebookLogin"
                android:textStyle="bold" />
        </FrameLayout>


        <FrameLayout
            android:id="@+id/FrameLayout2"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            app:layout_constraintLeft_toRightOf="@+id/FrameLayout1"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">


            <com.twitter.sdk.android.core.identity.TwitterLoginButton
                android:id="@+id/TwitterLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnTwitter"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/buttontwitter"
                android:onClick="TwitterLogin"
                android:textStyle="bold" />
        </FrameLayout>


        <Button
            android:id="@+id/btnGoogle"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/buttongmail"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    </android.support.constraint.ConstraintLayout>

</RelativeLayout>
